<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebeff0"
    android:importantForAccessibility="no">

    <ImageView
        android:id="@+id/neighbour_photo"
        android:layout_width="412dp"
        android:layout_height="284dp"
        android:background="@android:color/darker_gray"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_account" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:importantForAccessibility="no"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/neighbour_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/neighbour_photo"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Caroline" />

    <android.support.design.card.MaterialCardView
        android:id="@+id/material_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="2dp"
        app:layout_constraintTop_toBottomOf="@+id/neighbour_photo"
        tools:layout_editor_absoluteX="40dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/neighbour_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintBottom_toTopOf="@+id/neighbour_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Caroline" />

            <ImageView
                android:id="@+id/ic_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="@+id/neighbour_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/neighbour_address"
                android:importantForAccessibility="no"/>

            <TextView
                android:id="@+id/neighbour_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                app:layout_constraintStart_toEndOf="@id/ic_location"
                app:layout_constraintTop_toBottomOf="@id/neighbour_name"
                tools:text="Saint pierre du mont à 5 km" />

            <ImageView
                android:id="@+id/ic_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone"
                app:layout_constraintBottom_toBottomOf="@+id/neighbour_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/neighbour_phone"
                android:importantForAccessibility="no"/>

            <TextView
                android:id="@+id/neighbour_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                app:layout_constraintStart_toEndOf="@id/ic_phone"
                app:layout_constraintTop_toBottomOf="@id/neighbour_address"
                tools:text="+33 6 95 12 44 44" />

            <ImageView
                android:id="@+id/ic_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook"
                app:layout_constraintBottom_toBottomOf="@+id/neighbour_facebook"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/neighbour_facebook"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/neighbour_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:text="@string/facebook_url"
                app:layout_constraintStart_toEndOf="@id/ic_facebook"
                app:layout_constraintTop_toBottomOf="@id/neighbour_phone" />


        </android.support.constraint.ConstraintLayout>

    </android.support.design.card.MaterialCardView>

    <android.support.design.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="2dp"
        app:layout_constraintTop_toBottomOf="@+id/material_card_view"
        tools:layout_editor_absoluteX="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:text="A propos de moi" />

            <TextView
                android:id="@+id/neighbour_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                tools:text="Bonjour !Je souhaiterais faire de la marche nordique. Pas initiée, je recherche une ou plusieurs personnes susceptibles de m'accompagner !J'aime les jeux de cartes tels la belote et le tarot.."/>

        </LinearLayout>

    </android.support.design.card.MaterialCardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginEnd="28dp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/neighbour_photo"
        app:layout_constraintEnd_toEndOf="@+id/material_card_view"
        app:layout_constraintTop_toBottomOf="@+id/neighbour_photo"
        app:srcCompat="@drawable/ic_star_white"
        android:importantForAccessibility="no"/>


</android.support.constraint.ConstraintLayout>